--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .gradle
 /local.properties
 /.idea/caches
+/.idea/runConfiguration.xml
+/.idea/vcs.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
