--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DotsAndBoxes">
-        <activity android:name=".Help"></activity>
+        <activity android:name=".Board_4x4"></activity>
+        <activity android:name=".Help" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
