--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,17 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".NoColorPopUp"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.Dialog.CustomTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
